--- a/src/app/comun/heroe/heroe.component.html
+++ b/src/app/comun/heroe/heroe.component.html
@@ -15,7 +15,7 @@
 
 	<div class="frameCirculo">
 
-		<img  *ngIf="tipo=='jugador'" class="imagenPersonaje" src="../../../assets/Personajes/{{Personaje}}.png"/>	
+		<img  *ngIf="tipo=='jugador'" class="imagenPersonaje" src="../../../assets/Personajes/heroes/{{idImagen}}.png"/>	
 
 		<div *ngIf="tipo=='seleccionar'" class="contenedorIcono seleccionar">
 			<img class="imagenSeleccionarHeroe" src="../../../assets/Iconos/Icono-Heroe.png"/>	
