--- a/src/app/comun/heroes/heroes.component.sass
+++ b/src/app/comun/heroes/heroes.component.sass
@@ -1,7 +1,7 @@
 
 
   
-.videoParticulas 
+.videoParticulao 
   position: fixed
   min-height: 100%
   min-width: 100%
@@ -54,6 +54,7 @@
 
 .contenedorHeroes
   position: relative
+  display: block
   overflow-y: auto
   overflow-x: hidden
   margin-top: 5%
