--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -6,7 +6,7 @@
 <div class="contenedorPanelControl">
 
 	<!-- Boton Central -->
-	<div class="contenedorBotonCentral">
+	<div class="contenedorBotonCentral" (click)="this.inmapService.iniciarPartida()">
 		<div class="Texto2 textoBoton" >{{textoBotonCentral}}</div>
 		<div class="frameBotonCentral"></div>
 	</div>
