--- a/src/app/comun/crear-heroe/crear-heroe.component.sass
+++ b/src/app/comun/crear-heroe/crear-heroe.component.sass
@@ -86,6 +86,7 @@
             width: 40%
             height: 100%
             border-right: 2px solid $colorTexto
+
             .imagenHeroe
                 position: absolute
                 height: 80%
@@ -137,6 +138,12 @@
                         background-size: 80% 80% 
                         background-position: center
                         background-repeat: no-repeat
+                    .botonInteriorGenero
+                        position: absolute
+                        width: 100%
+                        height: 100%
+                        top: 0
+                        left: 0
 
         .contenedorDescripcion
             position: relative
