--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -61,10 +61,15 @@
 
     .frameCirculo
         position: absolute
+        display: flex
+        justify-content: center
+        align-items: center
         height: 100%
         width:  
         top: 0
         right: 0
+        background-color: $colorFondo1
+        border-radius: 100%
         img 
             position: relative
             display: block
@@ -72,7 +77,7 @@
 
         .imagenPersonaje
             position: absolute
-            clip-path: circle(45% at center)
+            height: 80%
 
         .contenedorIcono
             position: absolute
