--- a/src/app/comun/inmap/inmap.component.html
+++ b/src/app/comun/inmap/inmap.component.html
@@ -87,7 +87,7 @@
 	<!--      Panel Control    -->
 	<!--   ******************* -->
 
-	<panelControlComponent id="panelControl"></panelControlComponent>
+	<panelControlComponent [tipo]="'inMap'" (comandoPanelControl)="comandoPanelControl($event)" id="panelControl"></panelControlComponent>
 
 	<!--   ******************* -->
 	<!--        Experiencia    -->
@@ -100,7 +100,6 @@
 	<!--   ******************* -->
 	<div id="contenedorHeroes">
 
-		
 		<heroeComponent *ngFor="let jugador of this.inmapService.grupo; let i = index" [tipo]="renderizarTipo(jugador)" [Personaje]="camelize(jugador.heroe.clase)" [Roll]="'DPS'" [Nombre]="jugador.heroe.nombre" [idImagen]="jugador.heroe.idImagen"[Nivel]="jugador.heroe.nivel" [lider]="false" (click)="clickHeroe(jugador)"  class="panelHeroe"></heroeComponent>
 
 		<heroeComponent *ngIf="this.inmapService.grupo.length<5" [tipo]="'add'" [Personaje]="''" [Roll]="''" [Nombre]="''" [Nivel]="" [lider]="false" class="panelHeroe"></heroeComponent>
