--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -6,21 +6,18 @@
 <div class="contenedorPanelControl">
 
 	<!-- Boton Central -->
-	<div class="contenedorBotonCentral" (click)="this.inmapService.iniciarPartida()">
-		<div class="Texto2 textoBoton" >{{textoBotonCentral}}</div>
-		<div class="frameBotonCentral"></div>
+	<div class="contenedorBotonCentral" >
+		<img (click)="enviarComando('centro')" class="icono" src="assets/Iconos/Icono-Gema.png"/>
 	</div>
 
 	<!-- Boton Lateral Derecho -->
-	<div class="contenedorBotonLateral derecho">
-		<div class="Texto2 textoBoton" >{{textoBotonLateralDerecho}}</div>
-		<div class="frameBotonLateral derecho"></div>
+	<div class="contenedorBotonLateral derecho" (click)="enviarComando('derecha')">
+		<img class="icono" src="assets/Iconos/06.PNG"/>
 	</div>
 
 	<!-- Boton Lateral Izquierdo -->
-	<div class="contenedorBotonLateral izquierdo">
-		<div class="Texto2 textoBoton" >{{textoBotonLateralIzquierdo}}</div>
-		<div class="frameBotonLateral izquierdo"></div>
+	<div class="contenedorBotonLateral izquierdo" (click)="enviarComando('izquierda')">
+		<img class="icono" src="assets/Iconos/09.PNG"/>
 	</div>
 
 </div>
