Parche de vuelta

--- a/src/app/comun/barra/barra.component.html
+++ b/src/app/comun/barra/barra.component.html
@@ -6,7 +6,7 @@
 <div class="contenedorBarra">
 	
 	<div class="barra">
-		<div class="fondoBarra" [ngClass]="tipo"></div>
+		<div class="fondoBarra" [ngClass]="tipo" [style.width]="valor+'%'"></div>
 		<img class="frameBarra" src="../../../assets/Frames/Frame-Barra-Heroe.png"/>
 	</div>	
 
