--- a/src/app/comun/animacion-efecto/animacion-efecto.component.html
+++ b/src/app/comun/animacion-efecto/animacion-efecto.component.html
@@ -1,3 +1,25 @@
 
 
-<div  [@animacionEfecto]="{value: mostrarAnimacion, params: {tiempoEfectoParam: tiempoEfecto, stepsParam: stepsEfecto}}"  (@animacionEfecto.done)="resetAnimacionNumero();" class="animacionEfecto activo oculto" [ngClass]="renderIndividual()" [ngStyle]="{'background-image':'url(./assets/Efectos/' + nombreEfecto + '.png)'}"></div>
+
+<div *ngFor="let subanimacion of animacion.subanimaciones; let i=index" 
+		class="animacionEfecto activo oculto"
+		[@animacionEfecto]="{value: 'inicio', params: {tiempoEfectoParam: subanimacion.duracion, stepsParam: subanimacion.num_frames}}" 
+		(@animacionEfecto.start)="inicioAnimacion(i);" 
+		(@animacionEfecto.done)="finAnimacion(i);"  
+		[ngClass]="renderIndividual()" 
+		[ngStyle]="{'filter': 'hue-rotate(0 deg)','background-image':'url(./assets/Efectos/1.png)','background-size': stepsEfecto+'00% 100%'}"
+		>
+
+</div>
+
+<!--
+<div *ngFor="let subanimacion of animacion.subanimaciones; let i=index" 
+
+		[@animacionEfecto]="{value: 'inicio', params: {tiempoEfectoParam: subanimacion.duracion, stepsParam: subanimacion.stepsEfecto}}" 
+		(@animacionEfecto.start)="inicioAnimacion(i);" 
+		(@animacionEfecto.done)="finAnimacion(i);" class="animacionEfecto activo oculto" 
+		[ngClass]="renderIndividual()" 
+		[ngStyle]="{'filter': 'hue-rotate(0 deg)','background-image':'url(./assets/Efectos/1.png)','background-size': stepsEfecto+'00% 100%'}">
+
+</div>
+-->
