--- a/src/app/comun/enemigo/enemigo.component.html
+++ b/src/app/comun/enemigo/enemigo.component.html
@@ -8,7 +8,7 @@
 		<div class="frameImagen"></div>
 		<img class="imagenEnemigo" src="../../../assets/Enemigos/demonios/{{renderEnemigo.enemigo_id}}.png">
 
-                <appAnimacionEfecto #animacionEfecto [enemigo]="renderEnemigo" [enemigoAnimacion]="renderEnemigo.animacion"></appAnimacionEfecto>
+		<!--<appAnimacionEfecto #animacionEfecto [animacion]="renderEnemigo.animacion"></appAnimacionEfecto>-->
                 <appAnimacionNumero #animacionNumero [enemigo]="renderEnemigo" [enemigoVida]="renderEnemigo.vida" [enemigoIndex]="indexEnemigo"></appAnimacionNumero>
 
 	</div>
