--- a/src/app/comun/desarrollador/desarrollador.component.sass
+++ b/src/app/comun/desarrollador/desarrollador.component.sass
@@ -62,16 +62,9 @@
       border-color: white transparent white transparent
       animation: lds-dual-ring 1.2s linear infinite
 
-@keyframes lds-dual-ring 
-  0% 
-    transform: rotate(0deg)
-  
-  100% 
-    transform: rotate(360deg)
-
-// *************************************************
+//*************************************************
 //     BARRA INICIO
-// *************************************************
+//*************************************************/
 
 #barraInicio
   position: absolute
@@ -1476,6 +1469,7 @@
 
   .contenedorCentral
     form
+
 #visualizadorHechizos
     position: absolute
     width: 100%
@@ -1730,10 +1724,11 @@
       height: 10vw
       border: 2px solid white
       z-index: 10
-      img
+      .fondoAnimacion
         position: relative
         width: 100%
         height: 100%
+        background-color: black
     form
       position: absolute
       width: 100%
@@ -1753,27 +1748,81 @@
       .formNombre
         left: 30%
         top: 5%
-      .formDescripcion
-        left: 30%
-        top: 20%
-        width: 60%
 
+      .formNombreSubanimacion
+        left: 30%
+        top: 25%
+      .formSpriteId
+        left: 30%
+        top: 40%
+        width: 10%
       .formDuracion
-        left: 5%
-        top: 35%
+        left: 45%
+        top: 40%
         width: 10%
       .formNumFrames
-        left: 5%
-        top: 50%
-        width: 10%
-      .formHue
-        left: 5%
-        top: 65%
+        left: 60%
+        top: 40%
         width: 10%
       .formFrameRef
-        left: 5%
-        top: 80%
+        left: 75%
+        top: 40%
         width: 10%
+
+      .formHue
+        left: 30%
+        top: 55%
+        width: 10%
+      .formSepia
+        left: 45%
+        top: 55%
+        width: 10%
+      .formBrillo
+        left: 60%
+        top: 55%
+        width: 10%
+      .formSaturation
+        left: 75%
+        top: 55%
+        width: 10%
+
+      .formDelay
+        left: 30%
+        top: 70%
+        width: 10%
+      .formOffsetX
+        left: 45%
+        top: 70%
+        width: 10%
+      .formOffsetY
+        left: 60%
+        top: 70%
+        width: 10%
+    
+    .contenedorSubLista
+      position: absolute
+      width: 25%
+      height: 25%
+      left: 2%
+      background-color: grey
+      &.contenedorSubanimacion
+        top: 40%
+      &.contenedorSonido
+        top: 70%
+      .tituloSubLista
+        position: relative
+        display: flex
+        justify-content: center
+        background-color: black
+        color: white
+        width: 100%
+      .elemento
+        position: relative
+        width: 100%
+        &:hover
+          background-color: white
+          color: black
+
 
 // *************************************************
 //     SELECTOR IMAGENES
@@ -1875,6 +1924,12 @@
 
 //ANIMACIONE:
 
+@keyframes lds-dual-ring 
+  0% 
+    transform: rotate(0deg)
+  100% 
+    transform: rotate(360deg)
+
 @keyframes pulse-ring 
   0% 
     transform: scale(.33)
@@ -1894,12 +1949,7 @@ ngx-json-viewer
   ::ng-deep 
     overflow: scroll !important
 
-  
 
   
 
 
-  
-
-  
-  
