--- a/src/app/comun/animacion-efecto/animacion-efecto.component.html
+++ b/src/app/comun/animacion-efecto/animacion-efecto.component.html
@@ -3,11 +3,11 @@
 
 <div *ngFor="let subanimacion of animacion.subanimaciones; let i=index" 
 		class="animacionEfecto activo oculto"
-		[@animacionEfecto]="{value: 'inicio', params: {tiempoEfectoParam: subanimacion.duracion, stepsParam: subanimacion.num_frames}}" 
+		[@animacionEfecto]="{value: estadoAnimacion, params: {tiempoEfectoParam: subanimacion.duracion, stepsParam: subanimacion.num_frames}}" 
 		(@animacionEfecto.start)="inicioAnimacion(i);" 
 		(@animacionEfecto.done)="finAnimacion(i);"  
 		[ngClass]="renderIndividual()" 
-		[ngStyle]="{'filter': 'hue-rotate(0 deg)','background-image':'url(./assets/Efectos/1.png)','background-size': stepsEfecto+'00% 100%'}"
+		[ngStyle]="{'filter': 'hue-rotate('+subanimacion.hue_filter+'deg)','background-image':'url(./assets/Efectos/'+subanimacion.sprite_id+'.png)','background-size': stepsEfecto+'00% 100%'}"
 		>
 
 </div>
